[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/assets/Tarantula_Sprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ShowManTarantula.gd" type="Script" id=2]
[ext_resource path="res://scenes/instance/NotePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/instance/health_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/instance/save_state_node.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/delete_save_state.gd" type="Script" id=6]
[ext_resource path="res://scenes/assets/corrupter_particles.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 59.0512

[node name="ShowManTarantula" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, -39.275 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.32416, -28.1945 )
shape = SubResource( 1 )

[node name="NotePlayer" parent="." instance=ExtResource( 3 )]
position = Vector2( 2, -39.275 )

[node name="health_bar" parent="." instance=ExtResource( 4 )]
position = Vector2( 3.83878, -188 )
scale = Vector2( 2, 2 )

[node name="save_state_node" parent="." instance=ExtResource( 5 )]
script = ExtResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 16, -32 )

[node name="super_particles" parent="." instance=ExtResource( 7 )]
scale = Vector2( 5, 5 )

[node name="death_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
